# DataForecast

./: .gitignore  DataForecast.cabal  DataForecasting.cabal  README.md  buildDocs.sh
app/: Main.hs
haddock/: doc-index.html  index-frames.html  index.html
haddock/DataForecast-0.1.0.0/: DataForecast-TimeSeries-Aggregate.html  DataForecast-TimeSeries-Analysis.html  DataForecast-TimeSeries-Internal.html  DataForecast-TimeSeries.html  DataForecast.haddock  DataForecast.txt  doc-index.html  index-frames.html  index.html  mini_DataForecast-TimeSeries-Aggregate.html  mini_DataForecast-TimeSeries-Analysis.html  mini_DataForecast-TimeSeries-Internal.html  mini_DataForecast-TimeSeries.html
haddock/DataForecast-0.1.0.0/src/: DataForecast.TimeSeries.Aggregate.html  DataForecast.TimeSeries.Analysis.html  DataForecast.TimeSeries.Internal.html  DataForecast.TimeSeries.html  DataForecast.Tutorial.html
haddock/all/: doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  (+5 more)
haddock/protolude-0.1.10/: Applicative.html  Base.html  Bifunctor.html  Bool.html  Conv.html  Debug.html  Either.html  Exceptions.html  Functor.html  List.html  Monad.html  Panic.html  Protolude.html  Semiring.html  Show.html  Unsafe.html  doc-index-124.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  (+37 more)
haddock/protolude-0.1.10/src/: Applicative.html  Base.html  Bifunctor.html  Bool.html  Conv.html  Debug.html  Either.html  Exceptions.html  Functor.html  List.html  Monad.html  Panic.html  Protolude.html  Semiring.html  Show.html  Unsafe.html
haddock/safe-0.3.10/: Safe-Exact.html  Safe-Foldable.html  Safe.html  doc-index.html  index-frames.html  index.html  mini_Safe-Exact.html  mini_Safe.html  safe.haddock  safe.txt
haddock/safe-0.3.10/src/: Safe.Exact.html  Safe.Foldable.html  Safe.Util.html  Safe.html
haddock/text-1.2.2.1/: doc-index-All.html  doc-index-D.html  doc-index-H.html  doc-index-R.html  doc-index-S.html  text.haddock
haddock/text-1.2.2.1/src/: Data.Text.Encoding.Error.html  Data.Text.Foreign.html  Data.Text.IO.html  Data.Text.Internal.Builder.Functions.html  Data.Text.Internal.Builder.RealFloat.Functions.html  Data.Text.Internal.Builder.html  Data.Text.Internal.Encoding.Utf16.html  Data.Text.Internal.Encoding.Utf32.html  Data.Text.Internal.Encoding.Utf8.html  Data.Text.Internal.Functions.html  Data.Text.Internal.Fusion.CaseMapping.html  Data.Text.Internal.Fusion.Common.html  Data.Text.Internal.Fusion.Size.html  Data.Text.Internal.Fusion.Types.html  Data.Text.Internal.IO.html  Data.Text.Internal.Lazy.Fusion.html  Data.Text.Internal.Lazy.Search.html  Data.Text.Internal.Lazy.html  Data.Text.Internal.Read.html  Data.Text.Internal.Search.html  Data.Text.Internal.Unsafe.Char.html  Data.Text.Internal.Unsafe.Shift.html  Data.Text.Internal.Unsafe.html  Data.Text.Internal.html  Data.Text.Lazy.Builder.Int.html  Data.Text.Lazy.Builder.RealFloat.html  Data.Text.Lazy.Encoding.html  Data.Text.Lazy.IO.html  Data.Text.Lazy.Read.html  Data.Text.Lazy.html  Data.Text.Read.html  Data.Text.html
src/: DataForecast.hs  Lib.hs
src/DataForecast/: Prelude.hs  TimeSeries.hs  Tutorial.hs  Tutorial.lhs  TypeEq.hs
src/DataForecast/TimeSeries/: Aggregate.hs  Analysis.hs  Internal.hs
src/Lib/: Prelude.hs
test/DataForecast/: TimeSeriesSpec.hs  TutorialSpec.hs
test/DataForecast/TimeSeries/: AggregateSpec.hs  AnalysisSpec.hs
