name:                DataForecast
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/m-renaud/DataForecast#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Renaud
maintainer:          mrenaud92@gmail.com
copyright:           2017 Matt Renaud
category:            Data Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     DataForecast
  other-modules:       DataForecast.Prelude
  build-depends:       base >= 4.7 && < 5
                     , data-default
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable DataForecast-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DataForecast
                     , data-default
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite DataForecast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DataForecast
                     , data-default
                     , protolude >= 0.1.6 && < 0.2
                     , singletons
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/m-renaud/DataForecast
